--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -72,6 +72,7 @@
 
          padding-left: 3rem;
          padding-right: 3rem;
+	 margin-top: 3rem;
 
      }
 
@@ -107,6 +108,7 @@
 
         padding-left: 1rem;
         padding-right: 1rem;
+	margin-top: 1rem;
 
     }
 
